--- a/books_app/templates/book_detail.html
+++ b/books_app/templates/book_detail.html
@@ -1,20 +1,16 @@
-{% extends 'base.html' %}
-
-{% block content %}
+{% extends 'base.html' %} {% block content %}
 
 <h1>{{ book.title }}</h1>
 
-{% if current_user.is_authenticated %}
-    {% if book not in current_user.favorite_books %}
-    <form action="/favorite/{{ book.id }}" method="POST">
-        <input type="submit" value="Favorite This Book">
-    </form>
-    {% else %}
-    <form action="/unfavorite/{{ book.id }}" method="POST">
-        <input type="submit" value="Unfavorite This Book">
-    </form>
-    {% endif %}
-{% endif %}
+{% if current_user.is_authenticated %} {% if book not in current_user.favorite_books %}
+<form action="/favorite/{{ book.id }}" method="POST">
+    <input type="submit" value="Favorite This Book">
+</form>
+{% else %}
+<form action="/unfavorite/{{ book.id }}" method="POST">
+    <input type="submit" value="Unfavorite This Book">
+</form>
+{% endif %} {% endif %}
 
 <p>
     <strong>Author</strong>: {{ book.author.name }}
@@ -35,11 +31,7 @@
 </p>
 
 <p>
-    <strong>Genres</strong>: 
-    
-    {% for genre in book.genres %}
-    {{ genre.name }},
-    {% endfor %}
+    <strong>Genres</strong>: {% for genre in book.genres %} {{ genre.name }}, {% endfor %}
 </p>
 
 <form method="POST" action="{{ url_for('main.book_detail', book_id=book.id) }}">
@@ -47,22 +39,8 @@
     <fieldset>
         <legend>Edit this book</legend>
 
-        {{ form.title.label }}
-        {{ form.title }}
-        
-        {{ form.publish_date.label }}
-        {{ form.publish_date(placeholder="YYYY-mm-dd") }}
-        
-        {{ form.author.label }}
-        {{ form.author }}
-        
-        {{ form.audience.label }}
-        {{ form.audience }}
-        
-        {{ form.genres.label }}
-        {{ form.genres }}
-            
-        {{ form.submit }}
+        {{ form.title.label }} {{ form.title }} {{ form.publish_date.label }} {{ form.publish_date(placeholder="YYYY-mm-dd") }} {{ form.author.label }} {{ form.author }} {{ form.audience.label }} {{ form.audience }} {{ form.genres.label }} {{ form.genres }} {{
+        form.submit }}
     </fieldset>
 </form>
 
